--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue-next": "^0.9.4",
+    "querystring": "^0.2.1",
+    "querystringify": "^2.2.0",
     "vue": "^3.3.4",
     "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2",
