--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
     "bootstrap-vue-next": "^0.9.4",
     "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "querystring": "^0.2.1",
     "querystringify": "^2.2.0",
     "vue": "^3.3.4",
